# end2end-finanalytics

./: .gitignore  Dockerfile  README.md  data-exploration.py  download_dataset.sh  entrypoint.sh  start_glue.sh  start_nv.sh  stop_glue.sh
agent/: Dockerfile
cdk_deployment/: app.py  pyproject.toml  stack.py
dwh_dbt/: .gitignore  dbt_project.yml  profiles.yml  pyproject.toml
dwh_dbt/models/dwh/: br_transaction_error.sql  dim_calendar.sql  dim_cards.sql  dim_errors.sql  dim_merchants.sql  dim_transaction_type.sql  dim_users.sql  fct_transactions.sql  schema.yml  source.yml
glue/: cards-etl.py  mcc_codes-etl.py  transactions-step1-etl.py  transactions-step2-etl.py  users-etl.py
llm/: app.py  main.py  pyproject.toml
nvim/: init.lua  lazy-lock.json
nvim/lsp/: lua_ls.lua
nvim/lua/: keymaps.lua  options.lua
nvim/lua/config/: lazy.lua
nvim/lua/plugins/: codecompanion.lua  fzf.lua  kanagawa.lua  lsp-signature.lua  lsp.lua  molten.lua  nvim-cmp.lua  nvim-tree.lua  toggleterm.lua  treesitter.lua
nvim/queries/python/: injections.scm
pipeline/: pyproject.toml
pipeline/dags/: .airflowignore  finanalytics  main.py
reports/: analytics
