[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.2.0",
    "apache-airflow-providers-amazon>=9.24.0",
]


[tool.basedpyright]
venvPath = "."
venv = ".venv"

reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false
